@startuml Types
skinparam style strictuml
skinparam monochrome true

interface ASTNode {
    getLine(): int
    getColumn(): int
}

interface Type

class AbstractType {
    line: int
    column: int
}

ASTNode <|.. Type

ArrayType o-- "1" AbstractType
StructType o-- "0..n" RecordField

class ArrayType {
size: int
    type: Type
}
class StructType {
    defs: List<RecordField>
}

class IntType
class RealType
class CharType
class VoidType
class FunType {
    params:List<VarDef>
    returnType: Type
}

Type <|-- AbstractType

AbstractType <|-- ArrayType
AbstractType <|-- StructType
AbstractType <|-- FunType

AbstractType <|-- IntType
AbstractType <|-- RealType
AbstractType <|-- CharType
AbstractType <|-- VoidType


@enduml
